# QuantEdge-AI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/quantedge/data/: fetch_symbol_data.py  market_data.py  mt5_connector.py
