[project]
name = "quantedge-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "metatrader5>=5.0.5735",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
